# libqxt

./: .gitignore  CMakeLists.txt  README  README.md  conanfile.txt  configure  configure.bat  libqxt.pro  libqxt_git.pri  vcpkg.json
.github/workflows/: build.yml
config.tests/websockets/: websockets.cpp  websockets.pro
examples/: examples.pro
include/QxtSql/: QxtSqlFile  QxtSqlTransaction
src/: CMakeLists.txt  qxtbase.pri
src/core/: CMakeLists.txt  qxtrpcservice.cpp  qxtrpcservice.h  qxtrpcservice_p.h
src/core/win/: qxttemporarydir_win.cpp
src/designer/: CMakeLists.txt
src/network/: CMakeLists.txt  network.pri  network.pro  qxtjsonrpccall.cpp  qxtjsonrpccall.h  qxtjsonrpcclient.cpp  qxtjsonrpcclient.h  qxtmailattachment.h  qxtnetwork.h  qxtxmlrpccall.cpp  qxtxmlrpccall.h  qxtxmlrpcclient.cpp  qxtxmlrpcclient.h
src/sql/: CMakeLists.txt  qxtsqlfile.cpp  qxtsqlfile.h  qxtsqltransaction.cpp  qxtsqltransaction.h  sql.pri
src/web/: CMakeLists.txt  qxtabstracthttpconnector.cpp  qxtabstracthttpconnector.h  qxtabstractwebservice.cpp  qxtabstractwebservice.h  qxtabstractwebsessionmanager.cpp  qxtabstractwebsessionmanager.h  qxtabstractwebsessionmanager_p.h  qxthtmltemplate.cpp  qxthtmltemplate.h  qxthttpsessionmanager.cpp  qxthttpsessionmanager.h  qxtwebcontent.cpp  qxtwebcontent.h  qxtwebevent.cpp  qxtwebevent.h  qxtwebservicedirectory.cpp  qxtwebservicedirectory.h  qxtwebslotservice.cpp  qxtwebslotservice.h  web.pro
src/widgets/: CMakeLists.txt  widgets.pro
src/widgets/x11/: qxtscreen_x11.cpp
src/zeroconf/: CMakeLists.txt  qxtdiscoverableservicename.cpp
tests/other/no_keywords/: no_keywords.pro
tests/unit/: unit.pro
